fix: scrollbar-color and caret-color variables

--- a/src/SkinCitizen/SkinCitizen.less
+++ b/src/SkinCitizen/SkinCitizen.less
@@ -58,8 +58,8 @@ body {
 
 /* 滚动条显示主题色 */
 * {
-	scrollbar-color: var(@color--primary) transparent;
-	caret-color: var(@color--primary);
+	scrollbar-color: @color--primary transparent;
+	caret-color: @color--primary;
 }
 
 /* 页面内容宽度 */
